add scrdrraw_circle.py script to draw cricles on image using opencv

--- a/01-Image-Basics-with-OpenCV/Untitled.ipynb
+++ b/01-Image-Basics-with-OpenCV/Untitled.ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cv2\n",
+    "img = cv2.imread('flipped_dog.jpg')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [
@@ -9,12 +19,41 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello world!\n"
+      "hellow\n"
      ]
     }
    ],
    "source": [
-    "print('Hello world!')"
+    "print('hellow')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(650, 975, 3)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "img.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv2.destroyAllWindows()"
    ]
   },
   {
@@ -22,7 +61,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "9"
+   ]
   }
  ],
  "metadata": {
